<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/root_layout"
        android:background="@drawable/gradient_animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:backgroundTintMode="src_over" tools:ignore="UnusedAttribute">


    <EditText
            android:autofillHints="email"
            tools:targetApi="o"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text=""
            android:textColorHint="@color/colorBlack"
            android:hint="@string/vize"
            android:textSize="20sp"
            android:ems="10"
            android:id="@+id/vize" android:layout_weight="1" android:textAlignment="center"
            android:textStyle="italic"
            android:fontFamily="@font/baloo" android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:background="@drawable/edit_round"
            android:lineSpacingExtra="500sp"
            android:inputType="number"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/finall" android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toTopOf="@+id/sinifort"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="10dp" tools:ignore="TextViewEdits"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <EditText
            android:textColorHint="@color/colorBlack"
            android:autofillHints="email"
            tools:targetApi="o"
            android:hint="@string/finalnotu"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:text=""
            android:textSize="20sp"
            android:ems="10"
            android:id="@+id/finall"
            android:baselineAligned="false"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="italic"
            android:fontFamily="@font/baloo"
            android:textColor="@color/colorAccent"
            android:background="@drawable/edit_round"
            android:lineSpacingExtra="500sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/vize"
            app:layout_constraintStart_toEndOf="@+id/vize"
            android:layout_marginEnd="11dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAllCaps="false"/>
    <EditText
            tools:ignore="LabelFor"
            android:autofillHints="email"
            tools:targetApi="o"
            android:hint="@string/ortalama"
            android:textColorHint="@color/colorBlack"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text=""
            android:ems="10"
            android:textSize="18sp"
            android:id="@+id/sinifort" android:layout_weight="1" android:textAlignment="center"
            android:textStyle="italic"
            android:fontFamily="@font/baloo"
            android:textColor="@color/colorAccent" android:textAllCaps="false"
            android:background="@drawable/edit_round"
            android:lineSpacingExtra="500sp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/vize" app:layout_constraintStart_toEndOf="@+id/sapma"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="30dp"/>
    <EditText
            android:autofillHints="email"
            tools:targetApi="o"
            android:hint="@string/sapma"
            android:textColorHint="@color/colorBlack"
            tools:ignore="LabelFor"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text=""
            android:ems="10"
            android:textSize="18sp"
            android:id="@+id/sapma" android:layout_weight="1" android:textAlignment="center"
            android:fontFamily="@font/baloo"
            android:textColor="@color/colorAccent" android:textAllCaps="false"
            android:background="@drawable/edit_round" android:lineSpacingExtra="500sp"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/sinifort"
            app:layout_constraintEnd_toStartOf="@+id/sinifort" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:textStyle="italic" />
    <Button

            android:text="@string/buton"
            android:layout_width="300dp"
            android:id="@+id/hesaplabuton"
            android:textColorLink="@android:color/white"
            android:textSize="30sp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/luckiest_guy"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textStyle="normal|italic"
            android:onClick="hesapla"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/sinifort"
            android:layout_height="60dp"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintBottom_toTopOf="@+id/bilgi" android:layout_marginBottom="8dp" tools:ignore="OnClick"
            android:gravity="center" android:textAlignment="center"/>
    <TextView
            android:hint="@string/bilgi"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="250dp" android:id="@+id/bilgi"
            android:textSize="19sp" android:textAlignment="center"
            android:textColorHint="#FFFFFF"
            android:textColor="#000000"
            android:fontFamily="@font/caveat_bold"
            android:background="@drawable/textview_round"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:textStyle="bold|italic" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textAllCaps="false"
    />
    <ImageView
            android:contentDescription="@string/desc"
            android:layout_width="121dp"
            android:layout_height="89dp" app:srcCompat="@drawable/kep"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.502"/>
    <ListView
            android:fontFamily="@font/merienda_one"
            android:layout_width="259dp"
            android:layout_height="119dp"
            app:layout_constraintTop_toTopOf="@+id/bilgi" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/bilgi" app:layout_constraintEnd_toEndOf="@+id/bilgi"
            app:layout_constraintStart_toStartOf="@+id/bilgi" android:layout_marginStart="8dp"
            android:id="@+id/listbox"/>


</android.support.constraint.ConstraintLayout>